[gd_scene load_steps=3 format=2]

[ext_resource path="res://GUI/Themes/MenuTheme.tres" type="Theme" id=1]
[ext_resource path="res://GUI/ConfirmPrompt/ConfirmPrompt.gd" type="Script" id=2]

[node name="ConfirmPrompt" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
time_label_path = NodePath("CenterContainer/Panel/VBoxContainer/TimeLabel")

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.376471 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CenterContainer"]
margin_left = 540.0
margin_top = 285.0
margin_right = 740.0
margin_bottom = 435.0
rect_min_size = Vector2( 200, 150 )
theme = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
margin_right = 160.0
margin_bottom = 31.0
text = "Keep new display settings?"
align = 1
autowrap = true

[node name="ReferenceRect" type="ReferenceRect" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 35.0
margin_right = 160.0
margin_bottom = 45.0
size_flags_vertical = 3

[node name="TimeLabel" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 49.0
margin_right = 160.0
margin_bottom = 63.0
text = "10"
align = 1
autowrap = true

[node name="ReferenceRect2" type="ReferenceRect" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 67.0
margin_right = 160.0
margin_bottom = 78.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 82.0
margin_right = 160.0
margin_bottom = 110.0
rect_min_size = Vector2( 0, 28 )

[node name="YesButton" type="Button" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer"]
margin_right = 64.0
margin_bottom = 28.0
rect_min_size = Vector2( 64, 0 )
text = "Yes"

[node name="ReferenceRect" type="ReferenceRect" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer"]
margin_left = 68.0
margin_right = 92.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="NoButton" type="Button" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer"]
margin_left = 96.0
margin_right = 160.0
margin_bottom = 28.0
rect_min_size = Vector2( 64, 0 )
text = "No"

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/HBoxContainer/YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/HBoxContainer/NoButton" to="." method="_on_NoButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
